src/components/App/App.css
@font-face {
  font-family: 'LedDisplay';
  src: url('../../fonts/The Led Display St.ttf');
}

@font-face {
  font-family: 'Pixel';
  src: url('../../fonts/LLPIXEL3.ttf');
}

.app {
  display: flex;
  justify-content: center;
  align-items: center;
  background-image: url('../../images/jodie-walton-502797-unsplash.jpg');
  background-size: cover;
  width: 100vw;
  height: 100vh;
  margin: 0;
  padding: 0;
}

#drum-machine {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: calc(100% - 10px);
  max-width: 360px;
  padding: 40px;
  background-color: rgba(34, 34, 34, 0.8);
  border-radius: 20px;
}

#display {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 320px;
  height: 100px;
  box-sizing: border-box;
  font-family: 'Pixel';
  font-size: 24px;
  border-radius: 10px;
  margin: 5px 5px 10px 5px;
}

.pad-bank {
  width: 330px;
  display: flex;
  flex-wrap: wrap;
}

